# das-sentinel

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  APPFLOW.md  ARCHITECTURE.md  BACKEND_SCHEMA.md  CLAUDE.md  Caddyfile  DATABASE_SCHEMA.md  IMPLEMENTATION_PLAN.md  MVP_TASKS.md  PRD.md  README.md  ROADMAP.md  SECURITY_DEVELOPMENT_PLAN.md  TRD.md  ai-security-testing-platform-build-brief.md  docker-compose.yml  ui-ux-prototype.html
apps/api/: Dockerfile  alembic.ini  pyproject.toml  requirements-redteam.in  requirements-redteam.txt  requirements-scanners.in  requirements-scanners.txt
apps/api/app/: .gitkeep  main.py
apps/api/app/api/: approvals.py  audit.py  auth.py  compliance.py  cvss.py  engagements.py  findings.py  remediation.py  reports.py  roe.py  scans.py  scope.py  targets.py  triage.py  users.py
apps/api/app/connectors/: __init__.py  llm_target.py
apps/api/app/core/: audit.py  config.py  csrf.py  db.py  deps.py  egress.py  logging.py  ratelimit.py  scope.py  security.py  sessions.py
apps/api/app/llm/: __init__.py  anthropic_adapter.py  base.py  ollama_adapter.py  pricing.py  redaction.py  service.py
apps/api/app/models/: __init__.py  audit.py  base.py  compliance.py  cvss.py  engagement.py  evidence.py  finding.py  identity.py  llm.py  remediation.py  report.py  scan.py  scanner.py  target.py
apps/api/app/reports/: __init__.py  markdown.py  poam_csv.py
apps/api/app/runners/: __init__.py  base.py  pyrit_runner.py
apps/api/app/scanners/: __init__.py  base.py  semgrep.py  stub.py  zap.py
apps/api/app/schemas/: __init__.py  approvals.py  audit.py  auth.py  compliance.py  cvss.py  engagements.py  findings.py  remediation.py  reports.py  roe.py  scans.py  scope.py  targets.py  triage.py  users.py
apps/api/app/services/: __init__.py  approvals.py  authorization.py  compliance.py  cvss.py  engagements.py  finding_hash.py  findings.py  findings_read.py  remediation.py  reports.py  roe.py  sarif.py  scanner_findings.py  scans.py  scope_matchers.py  source_archive.py  targets.py  triage.py  triage_rank.py
apps/api/app/storage/: __init__.py  evidence.py
apps/api/app/suites/: __init__.py  base.py  detectors.py  engine.py  owasp_llm.py
apps/api/app/workers/: __init__.py  celery_app.py  dispatch.py  execution.py  orchestration.py  scanner_run.py  suite_run.py  tasks.py
apps/api/migrations/: .gitkeep  env.py  script.py.mako
apps/api/migrations/versions/: 066019c35fe5_audit_events_append_only.py  2b82615ef434_llm_interactions_m2_d2.py  3a9e97b159b1_identity_organizations_users_sessions.py  3d73f9cffd47_scans_exec_auth_test_runs_evidence_.py  4ba81961ace3_roe_acknowledgements_immutable_trigger.py  5af77397958d_targets_and_approval_gate_composite_fk.py  7f3a1b9c2d05_scan_runner_handle_m2_w1.py  8c4e1f7a9b23_targets_connector_config_m2_b6.py  9a1f4c7b2e60_scanner_runs_m3_d1.py  b3e8d1c60f24_cvss_and_compliance_m3_d2.py  c7f2a9d4e130_reports_m3_d3.py  caab8ec4571a_baseline.py  d4f1a2b3c5e6_remediations_m4_b1.py  (+1 more)
apps/api/scripts/: dogfood_semgrep.py  ensure_bucket.py  seed_compliance.py  seed_e2e_findings.py  seed_e2e_user.py  verify_approvals.py  verify_audit.py  verify_auth_csrf.py  verify_compliance.py  verify_cvss.py  verify_data_leakage.py  verify_e2e_llm_scan.py  verify_egress_shaper.py  verify_emergency_stop.py  verify_engagements.py  verify_evidence_store.py  verify_execution.py  verify_findings.py  verify_hostile_parser.py  verify_idor.py  verify_insert_only.py  verify_llm.py  verify_llm_budget.py  verify_llm_target_connector.py  verify_login_ratelimit.py  verify_prompt_injection.py  verify_pyrit_runner.py  verify_rbac.py  verify_remediation.py  verify_reports.py  verify_roe.py  verify_sarif.py  verify_scan_launch.py  verify_scanner_framework.py  verify_scans.py  verify_scope.py  verify_semgrep_scanner.py  verify_sessions.py  verify_source_archive.py  verify_t1_scanners.py  (+6 more)
apps/api/tests/: conftest.py  test_approvals.py  test_audit.py  test_auth_injection.py  test_compliance.py  test_compose_security.py  test_config.py  test_connectors.py  test_csrf.py  test_cvss.py  test_data_leakage_suite.py  test_deps_rbac.py  test_detectors.py  test_dispatch.py  test_egress.py  test_engagement_status.py  test_execution.py  test_findings.py  test_findings_read.py  test_health.py  test_llm.py  test_migrations.py  test_normalizer_fuzz.py  test_prompt_injection_suite.py  test_ratelimit.py  test_rbac_routes.py  test_remediation.py  test_reports.py  test_roe.py  test_runners.py  test_safety_negatives.py  test_sarif.py  test_scanners.py  test_scans.py  test_scope.py  test_scope_matchers.py  test_security.py  test_sessions.py  test_source_archive.py  test_ssrf.py  (+6 more)
(+85 files in other folders)
