[project]
name = "das-sentinel-api"
version = "0.1.0"
description = "DAS Sentinel API/worker (FastAPI + Celery)"
requires-python = ">=3.12"
# Grown in lockstep with milestones (M0-I3 config, M0-B1 API skeleton).
# Celery lands in M0-W1, Alembic in M0-D1.
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "redis>=5.0",
    "celery[redis]>=5.5",
    "alembic>=1.16",
    "argon2-cffi>=23.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "httpx>=0.27",
    "pyyaml>=6",
]
monitoring = [
    "flower==2.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
# S101: pytest asserts. S603/S607: tests shell out to `git check-ignore` with
# fixed, list-form argv (no shell, no untrusted input) — owner: api tests.
"tests/**" = ["S101", "S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
