[project]
name = "das-sentinel-api"
version = "0.1.0"
description = "DAS Sentinel API/worker (FastAPI + Celery)"
requires-python = ">=3.12"
# Grown in lockstep with milestones (M0-I3 config, M0-B1 API skeleton).
# Celery lands in M0-W1, Alembic in M0-D1.
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "fastapi>=0.115",
    "python-multipart>=0.0.18",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "redis>=5.0",
    "celery[redis]>=5.5",
    "alembic>=1.16",
    "argon2-cffi>=23.1",
    "email-validator>=2.1",
    "boto3>=1.35",
    "anthropic>=0.40",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "httpx>=0.27",
    "pyyaml>=6",
    "pytest-asyncio>=0.24",
]
monitoring = [
    "flower==2.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom is `= Depends(...)` in defaults; these
# callables are safe there (B008 otherwise flags the framework's intended use).
# require() is our RBAC dependency factory, used the same way as Depends().
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.File",
    "app.core.deps.require",
]

[tool.ruff.lint.per-file-ignores]
# S101: pytest asserts. S603/S607: tests shell out to `git check-ignore` with
# fixed, list-form argv (no shell, no untrusted input). S104: "0.0.0.0" appears
# as SSRF test data, not a socket bind. Owner: api tests.
"tests/**" = ["S101", "S603", "S607", "S104"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Async tests (RBAC guards, M1-B3+) run without a per-test marker.
asyncio_mode = "auto"
